- Fixed spacing of theme buttons

--- a/styles.css
+++ b/styles.css
@@ -127,9 +127,9 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    top: 20px;
+    top:20px;
     right: 20px;
+    position: fixed;
 }
 #theme-picker span{
     fill: black;
@@ -192,7 +192,7 @@ html.pinkmode, html.pinkmode body {
     align-items: center;
     position: fixed;
     top: 20px;
-    right: 145px;
+    right: 140px;
 } 
 
 html.purplemode, html.purplemode body {
@@ -209,9 +209,9 @@ html.purplemode, html.purplemode body {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
     top: 20px;
-    right: 210px;
+    position: fixed;
+    right: 200px;
 } 
 
 html.bluemode, html.bluemode body {
@@ -228,9 +228,9 @@ html.bluemode, html.bluemode body {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
     top: 20px;
-    right: 280px;
+    right: 260px;
+    position: fixed;
 }
 
 html.defaultmode, html.defaultmode body {
